--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Random Quote Generator</h1>
-        <div id="divid">
-            <p id="pid">Click the button to generate a random name</p>
+        <h1 id="hid">Random Quote Generator</h1>
+        <div id="main">
+        <div id="blocks">
+            <div id="d1"></div>
+            <div id="d2"></div>
+            <div id="d3"></div>
+            <div id="d4"></div>
+            <div id="d5"></div>
+            <div id="d6"></div>
         </div>
-        <button id="bid">Get Name</button>
     </div>
+    <div id="divid">
+        <button id="bid">Get Quotes</button>
+        </div>
+    </div>
+  
     <script src="script.js"></script>
 </body>
 </html>
