GDG WEB_ASSIGNMENT

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ 
     <div class="container">
         <h1 id="hid">Random Quote Generator</h1>
         <div id="main">
         <div id="blocks">
-            <div id="d1"></div>
-            <div id="d2"></div>
-            <div id="d3"></div>
-            <div id="d4"></div>
-            <div id="d5"></div>
-            <div id="d6"></div>
+            <div id="d1" class="common"><p id="pid1"></p></div>
+            <div id="d2" class="common"><p id="pid2"></p></div>
+            <div id="d3"class="common"><p id="pid3"></p></div>
+            <div id="d4"class="common"><p id="pid4"></p></div>
+            <div id="d5"class="common"><p id="pid5"></p></div>
+            <div id="d6"class="common"><p id="pid6"></p></div>
         </div>
     </div>
     <div id="divid">
         <button id="bid">Get Quotes</button>
         </div>
     </div>
-  
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
